feat: session, tickers and environments
